--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl underline">Maxime Pero - Developpeur Web</h1>
         </div>
     </div>
-   
+
 <!-- Compétences clés -->
 <div class="bg-white py-24 sm:py-32 flex-grow">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
@@ -32,7 +32,7 @@
               </div>
               Point fort n°1
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi. Odio urna massa nunc massa.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Expérience avec la création de sites web ou d'applications mobiles simples.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -41,7 +41,7 @@
               </div>
               Point fort n°2
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget. Sem sodales gravida quam turpis enim lacus amet.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Capacité à travailler en équipe sur des projets académiques (projets collaboratifs).</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -50,7 +50,7 @@
               </div>
               Point fort n°3
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Travail en équipe : Expériences de collaboration avec d'autres étudiants sur des projets informatiques.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
