--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
               Point fort n°4
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Autonomie : Capacité à travailler seul et à se former.</dd>
           </div>
     </div>
   </div>
