--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </div>
               Axe d'amélioration n°1
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Maîtrise de frameworks front-end : Améliorer l'utilisation de frameworks comme React, Vue.js</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -92,7 +92,8 @@
               </div>
               Axe d'amélioration n°2
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Amélioration de la gestion de projet : Perfectionner l'organisation et l'optimisation des tâches pour des projets plus complexes.
+            </dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -101,7 +102,7 @@
               </div>
               Axe d'amélioration n°3
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Optimisation du responsive design : Travailler davantage sur l'adaptation des sites pour qu'ils soient parfaitement fonctionnels sur tous types d'appareils (mobile, tablette).</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -110,7 +111,7 @@
               </div>
               Axe d'amélioration n°4
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Montée en compétence sur les APIs : Approfondir la création et l’intégration d’APIs RESTful et GraphQL pour mieux interagir avec les services web.</dd>
           </div>
         </dl>
       </div>
