--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <div class="text-center">
             <div class="flex justify-center mb-4">
                 <div class="text-indigo-600">
-                    <img class="h-8 w-8 " src="assets/Maxime pero.pdf" alt="cv">
+                    <img class="h-8 w-8 " src="assets/cv.svg" alt="cv">
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Curriculum Vitae</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="/files/Maxime pero.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Lettre de motivation -->
