--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Lettre de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="/files/Lettre de Motivation.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Message de motivation -->
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Message de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="/files/Message de motivation.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Mail de relance -->
