adding mail de relance and roadmap

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Mail de relance</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="/files/Mail de relance.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
     </div>
 </div>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Montée en compétence</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
+            <a href="https://docs.google.com/spreadsheets/d/1tiI_EAYx86C2DS68ceAqPq6aXUAh3MJh2Ik5u6sn7SU/edit?usp=sharing" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
         </div>
     </div>
 </div>
